log
Thu Apr  7 15:17:16 UTC 2022: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
test.c: In function ‘createMap’:
hashmap.c:57:11: error: ‘Mapa’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
       Mapa->buckets[i] = NULL;
       ~~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
7dbb936
Thu Apr  7 15:18:21 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:55:22: error: expected expression before ‘)’ token
     HashMap *Mapa = ();
                      ^
Compilation failed
c51d8fa
Thu Apr  7 15:18:44 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:55:21: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
     HashMap *Mapa = (Pair*)malloc(sizeof(Pair));
                     ^
cc1: all warnings being treated as errors
Compilation failed
bbeb4f2
